=======
CHANGES
=======

0.7.1 (unreleased)
------------------

- ...

0.7.0 (2009-07-24)
------------------

- Fixed tests to work with latest package versions.

- The buildout now also pulls in the test extras, which is required.

0.6.1 (2008-05-20)
------------------

- No code changes, and only a very minor documentation tweak.
  Re-released to avoid confusion over package versions found in the wild.

0.5.2 (2007-11-03)
------------------

- Improve package data.

0.5.1 (2006-05-24)
------------------

- Package data update.

0.5.0 (2006-05-24)
------------------

- Initial release.