@@ -5,7 +5,8 @@ CHANGES
 0.7.1 (unreleased)
 ------------------
 
-- ...
+- Using Python's ``doctest`` module instead of depreacted
+  ``zope.testing.doctest``.
 
 0.7.0 (2009-07-24)
 ------------------
